--- a/app/components/RegisterPhone/RegisterPhone.css
+++ b/app/components/RegisterPhone/RegisterPhone.css
@@ -9,16 +9,16 @@ button {
   position: relative;
   overflow: hidden;
   border: 2px solid var(--color);
-  -webkit-transition: color .5s;
-  transition: color .5s;
+  -webkit-transition: color 0.5s;
+  transition: color 0.5s;
   z-index: 1;
   font-size: 17px;
   border-radius: 6px;
   font-weight: 500;
   color: var(--color);
- }
- 
- button:before {
+}
+
+button:before {
   content: "";
   position: absolute;
   z-index: -1;
@@ -26,25 +26,24 @@ button {
   height: 150px;
   width: 200px;
   border-radius: 50%;
- }
- 
- button:hover {
+}
+
+button:hover {
   color: #fff;
- }
- 
- button:before {
+}
+
+button:before {
   top: 100%;
   left: 100%;
-  -webkit-transition: all .7s;
-  transition: all .7s;
- }
- 
- button:hover:before {
+  -webkit-transition: all 0.7s;
+  transition: all 0.7s;
+}
+
+button:hover:before {
   top: -30px;
   left: -30px;
- }
- 
- button:active:before {
-  background: #3a0ca3;
+}
 
- }
+button:active:before {
+  background: #3a0ca3;
+}
