--- a/app/globals.css
+++ b/app/globals.css
@@ -1,5 +1,16 @@
+/* @import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap'); */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-*{ @apply transition-colors duration-500}
+@layer base {
+  @font-face {
+    font-family: 'Rubik';
+    font-style: normal;
+    font-weight: 400;   
+    src: url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
+  }
+}
+* {
+  @apply transition-colors duration-500 ;
+}
